# CoinMP

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.txt  CoinMP.cpp  CoinMP.lib  Dependencies  Externals  Externals.new  Externals.rel  Externals.sta  Externals.stab  INSTALL  INSTALL.txt  LICENSE  Makefile.am  Makefile.in  README  README.txt  appveyor.yml  configure  configure.ac
.coin-or/: projDesc.xml
CoinMP/: AUTHORS  Makefile.am  Makefile.in  README  coinmp-uninstalled.pc.in  coinmp.pc.in  configure  configure.ac  makezip.bat
CoinMP/MSVisualStudio/v10/: CoinMP.sln
CoinMP/MSVisualStudio/v10/CoinMP/: CoinMP.rc  CoinMP.vcxproj  resource.h
CoinMP/MSVisualStudio/v10/unitTest/: unitTest.vcxproj
CoinMP/MSVisualStudio/v8/CoinMP/: CoinMP.rc  CoinMP.vcproj
CoinMP/MSVisualStudio/v8/release/: CoinMP.exp  CoinMP.lib
CoinMP/MSVisualStudio/v8/unitTest/: unitTest.vcproj
CoinMP/MSVisualStudio/v9/: CoinMP.sln
CoinMP/MSVisualStudio/v9/CoinMP/: CoinMP.rc  CoinMP.vcproj
CoinMP/MSVisualStudio/v9/release/: CoinMP.exp  CoinMP.lib
CoinMP/MSVisualStudio/v9/unitTest/: unitTest.vcproj
CoinMP/MSVisualStudio/v9/x64/Release/: CoinMP.exp  CoinMP.lib
CoinMP/examples/: Makefile  Makefile.in  example.c  example.cpp
CoinMP/examples/csharp/: CoinMPTestCS8.csproj  CoinMPTestCS8.sln  CoinMPTestCS9.csproj  CoinMPTestCS9.sln  Coinmp.cs  Form1.Designer.cs  Form1.cs  LogHandler.cs  ProblemAfiro.cs  ProblemBakery.cs  ProblemCoinTest.cs  ProblemExMip1.cs  ProblemGamsSos1a.cs  ProblemGamsSos2a.cs  ProblemP0033.cs  ProblemsSemiCont.cs  Program.cs  SolveProblem.cs
CoinMP/examples/csharp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CoinMP/examples/vb6/: CoinMPTestVB6.vbp  FrmCoinMP.frm  LibCoinMP.bas  LogWrite.bas  RunProblem.bas  SolveAfiro.bas  SolveBakery.bas  SolveCoinTest.bas  SolveExMip1.bas  SolveP0033.bas
CoinMP/inc/: config_coinmp.h.in
CoinMP/msvc6/: CoinMP.dsp  CoinMP.dsw  unitTest.dsp
CoinMP/msvc6/CoinMPDll/: CoinMPDll.dsp
CoinMP/msvc6/Release/: CoinMP.exp  CoinMP.lib
CoinMP/src/: CoinCbc.cpp  CoinCbc.h  CoinMP.cpp  CoinMP.def  CoinMP.h  CoinMPConfig.h  CoinOption.c  CoinOption.h  CoinProblem.c  CoinProblem.h  CoinResult.c  CoinResult.h  CoinSolver.c  CoinSolver.h  Makefile.am  Makefile.in  config.h.in  config_coinmp.h.in  config_coinmp_default.h  config_default.h
CoinMP/test/: Makefile.am  Makefile.in  unitTest.c  unitTest.cpp
CoinSMI/: AUTHORS  Externals  Externals.rel  INSTALL  LICENSE  README
CoinSMI/CoinMP/: AUTHORS  Makefile.in  README  configure
CoinSMI/CoinMP/MSVisualStudio/v8/CoinMP/: CoinMP.vcproj  resource.h
CoinSMI/CoinMP/MSVisualStudio/v9/: CoinMP.sln
CoinSMI/CoinMP/examples/csharp/: CoinMPTestCS8.csproj  Form1.cs  ProblemP0033.cs  Program.cs  SolveProblem.cs
CoinSMI/CoinMP/examples/csharp/Properties/: AssemblyInfo.cs  Settings.Designer.cs
CoinSMI/CoinMP/examples/vb6/: FrmCoinMP.frm  SolveAfiro.bas
CoinSMI/CoinMP/src/: CoinMP.cpp  CoinMP.def
CoinSMI/CoinMP/test/: Makefile.in
examples/csharp/: CoinMPTestCS9.csproj  Coinmp.cs  ProblemAfiro.cs
examples/vb6/: CoinMPTestVB6.vbp  LibCoinMP.bas  RunProblem.bas  SolveExMip1.bas  SolveP0033.bas
inc/: config_coinmp.h.in
msvc6/: CoinMP.dsp  CoinMP.dsw
msvc6/unitTest/: unitTest.dsp
src/: CoinMPConfig.h
test/: Makefile.am  unitTest.c  unitTest.cpp
